styles/_base.scss
body {
  font-family: "Rebond Grotesque", sans-serif;
  font-feature-settings: "ss06" 1, "ss07" 1, "ss09" 1, "liga" 1, "calt" 1, "dlig" 1;
  font-display: swap;
  -webkit-font-smoothing: antialiased;

  background: $color-background;
  color: $color-text;

  padding: 8rem;
  max-width: $max-width;

  @media (max-width: $max-width) {
    padding: 1rem;
  }

  @media (max-width: 640px) {
    padding: .5rem;
  }
}

.hidden {
  display: none;
}

.skip-link {
  position: absolute;
  top: 0;
  transform: translateY(-100%);
}

.skip-link:focus {
  transform: translateY(0);
}

h1, h2, h3, h4, h5, h6 {
  color: $color-headings;

  a {
    text-decoration-thickness: 2px;
  }
}

h1 {
  font-size: $typescale-xxxl;
  line-height: 1.2;
  margin-bottom: .5rem;
}

h2 {
  font-size: $typescale-xl;
}

h3 {
  font-size: $typescale-l;
}

@media (max-width: $max-width) {
  h1 {
    font-size: $typescale-xxl;
  }

  h2 {
    font-size: $typescale-l;
  }

  h3 {
    font-size: 1rem;
  }
}

a {
  color: $color-text;
  text-underline-offset: 2px;
}

.back_link {
  padding-bottom: 2rem;
  display: inline-block;
  color: $color-muted;
}

dl {
  dt {
    font-weight: bold;
    float: left;
    margin-right: 4px;

    &:after {
      content: ':';
    }
  }
}

.inheritFontSize {
  font-size: inherit;
}

pre, code {
  font-family: "Berkerly Mono", monospace;
  font-display: swap;
  -webkit-font-smoothing: antialiased;
  font-size: .9rem; // match the body font size
}

blockquote {
  padding: .5rem 1rem;
  border-left: 4px solid $color-text;
  font-style: italic;
}

.footnotes {
  padding-top: 2rem;
  color: $color-muted;
}

pre {
  overflow-x: scroll;
}

